robballen75-Salesforce/4-7-15/src/objects/Download__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Downloads</relationshipLabel>
        <relationshipName>Downloads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Downloads</relationshipLabel>
        <relationshipName>Downloads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WebDL_Id__c</fullName>
        <externalId>true</externalId>
        <label>WebDL Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fileDownloaded__c</fullName>
        <label>fileDownloaded</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>productId__c</fullName>
        <label>productId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>whenDownloaded__c</fullName>
        <label>whenDownloaded</label>
        <type>DateTime</type>
    </fields>
    <label>Download</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>fileDownloaded__c</columns>
        <columns>Account__c</columns>
        <columns>whenDownloaded__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DL-{0000000}</displayFormat>
        <label>Download #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Downloads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>